# fo-rma

./: Cargo.toml  README.md  TODO.md  song.json
python-extras/: scene_generator.py
scenes/: scene_01.json  scene_02.json  scene_03.json  scene_04.json  scene_05.json  scene_06.json  scene_07.json  scene_08.json  scene_09.json
src/: app.rs  audio.rs  back.rs  color_utils.rs  graphic.rs  gui.rs  main.rs  material.rs  p_renderer.rs  rend.rs  renderer.rs  rendering_utils.rs  save_image.rs  shader_utils.rs  strict_covers.rs  summarized.rs  utils.rs
src/audio/: audio_clock.rs  audio_model.rs  clock.rs  core.rs  envelope.rs  generator.rs  lfo.rs  modulated_oscillator.rs  noise_generator.rs  oscillator_type.rs  sequencer.rs  song.rs  songs.rs  utils.rs  vco.rs
src/basics/: camera.rs  circle.rs  core.rs  cube.rs  cube_renderer.rs  cylinder.rs  debug_circle.rs  level.rs  light.rs  material.rs  mod.rs  primitive.rs  quad.rs  scene.rs  scene2.rs  scene3.rs  scene_constructor.rs  scene_loader.rs  screen_quad.rs  shader_data.rs  sphere.rs  triangle.rs  uniforms.rs
src/cpu_path_tracer/: aabb.rs  camera.rs  hitable.rs  mod.rs  plane.rs  primitives.rs  ray.rs  rectangle.rs  scenes.rs  sphere.rs
src/cpu_ray_tracer/: camera.rs  mod.rs  primitives.rs  scene.rs  scenes.rs  tracer.rs
src/cpu_tracer/: camera.rs  mod.rs  primitives.rs  ray.rs  sphere.rs  utility.rs
src/frontend/: macroquad.rs  minifb.rs  miniquad.rs  mod.rs  one_frame.rs  sdl.rs  wnt.rs
src/gui/: gui_envelope.rs  gui_oscillator.rs  gui_post_process.rs  gui_sequencer.rs  gui_sequencer_list.rs  gui_temp.rs  gui_vfx.rs  top_bar.rs
src/material/: debug_line_material.rs  debug_material.rs  diffuse_color_material.rs  equalizer_material.rs  material_layout.rs  post_process_material.rs  render_post_process_texture_material.rs  screen_quad_material.rs  texture_material.rs  unlit_color_material.rs  wave_material.rs
src/misc/: bicycle_generator.rs  fps_utils.rs  maze.rs  maze_generator.rs  mod.rs  strict_covers.rs
src/primitives/: circle.rs  cube.rs  cylinder.rs  debug_circle.rs  mod.rs  primitive.rs  quad.rs  screen_quad.rs  sphere.rs  tetrahedron.rs  triangle.rs
src/rendering/: debug_renderer.rs  fill_renderer.rs  line_renderer.rs  mod.rs  post_processor.rs  screen_renderer.rs  temp_renderer.rs
(+39 files in other folders)
