[package]
name = "fo-rma"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
image = "0.24.0"
rand = "0.8.4"
puffin = "0.14"
macroquad = { version = "0.3.6", default-features = false }
egui-macroquad = "0.12.0"
egui = { version = "0.19", features = ["bytemuck"] }
# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.10"
