[package]
name = "fo-rma"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
egui-wgpu = "0.27"
egui-winit = "0.27"
glam = "0.29"
cpal = "0.15"
kopek = { git = "https://github.com/zehreken/kopek.git" }

image = "0.25.0"
rand = "0.8.4"
puffin = "0.19"
egui = { version = "0.27", features = ["bytemuck"] }
# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.10"
