[package]
name = "fo-rma"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.29"
winit_input_helper = "0.16.0"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.4"
bytemuck = { version = "1.12", features = ["derive"] }
egui-wgpu = "0.27"
egui-winit = "0.27"
glam = "0.30"
cpal = "0.15"
kopek = { path = "../kopek" }
num-traits = "0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
ringbuf = "0.3.2"
image = "0.25.0"
rand = "0.9"
puffin = "0.19"
egui = { version = "0.27", features = ["bytemuck"] }
# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.10"
